# zkl-knowedit-rome

./: .gitignore  README.md  compare_left_right.py  compare_uv.py  edit.py  pyproject.toml
hparams/: EleutherAI_gpt-j-6B.json  gpt2-large.json
hparams/ROME/: EleutherAI_gpt-j-6B.json  gpt2-large.json  gpt2-medium.json  gpt2-xl.json
rome/: README.md  __init__.py  apply.py  compute_c.py  compute_k.py  compute_k_v.py  compute_kv.py  compute_left.py  compute_left_right.py  compute_right.py  compute_u.py  compute_uv.py  compute_v.py  compute_v_delta.py  compute_v_v2.py  hparams.py  layer_stats.py  prefixes.py  preserving.py  repr_tools.py  request.py  rewriting.py  rome_hparams.py  rome_main.py
rome/utils/: batching.py  generate.py  hooks.py  logit_lens.py
scripts/: compare.py  edit.py  edit_detailed.py  edit_simple.py  utils.py
util/: generate.py  logit_lens.py
zkl_rome/: __init__.py  apply_left_right.py  compute_c.py  compute_c_inv.py  compute_k_v.py  compute_left_right.py  compute_v_delta.py  generate_prefixes.py  hooks.py  preserving.py  rewriting.py  rome.py
