[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "zkl-knowedit-rome"
version = "0.2.2"
readme = "README.md"
description = "A reimplementation of ROME with a better engeneering design."
authors = ["Keli Zheng <zhengkeli2009@126.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
transformers = "^4.44.2"

[tool.poetry.group.dev.dependencies]
datasets = "^3.0.1"
