[project]
name = "zkl-rome"
version = "0.4.1"
readme = "README.md"
description = "A reimplementation of ROME with better engineering."
authors = [{ name = "Keli Zheng", email = "zhengkeli2009@126.com" }]

requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.66.6",
    "torch>=2.4.1",
    "datasets>=3.0.1",
    "transformers>=4.44.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
